--- a/main.html
+++ b/main.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body onload="myFunction()" id="dom">
 	<!-- the entire body must be written by student -->
+<!-- 	<div ></div> -->
     <script type="text/javascript" src="./script.js">
 </script>
 
